--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "chromedriver": "^127.0.0",
     "raw-loader": "^4.0.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
@@ -18,6 +19,7 @@
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "selenium-webdriver": "^4.23.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
